brand as extra  component

--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -112,3 +112,12 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
         color: #1976d7;
     }
 }
+
+.brandLogo {
+    position: absolute;
+    right: 15px;
+    bottom: 0px;
+    img {
+        width: 150px;
+    }
+}
