--- a/src/pages/Catalog/CatalogPage/CatalogPage.scss
+++ b/src/pages/Catalog/CatalogPage/CatalogPage.scss
@@ -10,6 +10,7 @@
 
 .itemImgBlock {
     position: relative;
+    min-height: 235px;
     .imgList {
         position: absolute;
         overflow-y: scroll;
