--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -116,8 +116,20 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
 .brandLogo {
     position: absolute;
     right: 15px;
-    bottom: 0px;
+    bottom: -10px;
     img {
         width: 150px;
+    }
+}
+
+.itemPrice {
+    position: absolute;
+    right: 15px;
+    top: -22px;
+    font-size: 24px;
+    color: #242424;
+    font-style: italic;
+    .price{
+        color: indianred;
     }
 }
