bread, link, redirect

--- a/src/pages/Catalog/CatalogDetails/CatalogDetails.scss
+++ b/src/pages/Catalog/CatalogDetails/CatalogDetails.scss
@@ -2,8 +2,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
     margin-top: 15px;
+    a{
+        text-decoration: none;
+        color: inherit;
+    }
     .item {
         flex: 0 1 20%;
         padding: 15px;
@@ -38,5 +41,6 @@
             transition: padding-left ease-in-out 0.5s;
 
         }
+
     }
 }
