--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -54,6 +54,7 @@
         line-height: 36px;
         padding: 0 10px;
         box-shadow: 0 1px 0 0 #d7d8db;
+        width: 85%;
     }
     .filterCheckBox {
         border-top: 1px solid #b7b7b7;
