--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -3,7 +3,7 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
 .titleBlock {
     text-align: center;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 27px;
     display: flex;
     justify-content: center;
     font-family: "Alegreya", serif;
@@ -12,11 +12,13 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
     text-transform: uppercase;
     font-style: italic;
     white-space: nowrap;
+    margin-top: 35px;
     margin-bottom: 10px;
+    z-index: 100;
     .blockBody {
-        box-shadow: $blockShadow;
+        /*box-shadow: $blockShadow;
         background-color: #ffffff;
-        width: 90%;
+        width: 90%;*/
         margin: -10px 0 10px 0;
         padding: 10px;
     }
