--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -31,14 +31,23 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
     margin: 10px;
     min-width: 300px;
     height: 90px;
-    box-shadow: $blockShadow;
+    /*box-shadow: $blockShadow;*/
     background-color: #ffffffed;
+    transition: 0.15s all ease-in-out;
+    box-shadow: 0 2px 4px 0 rgba(136, 144, 195, 0.2), 0 5px 15px 0 rgba(37, 44, 97, 0.15);
+    border-radius: 3px;
+    transform: rotate(2deg);
+    cursor: pointer;
     > div:nth-child(2) {
         font-weight: 600;
         color: #676767;
     }
     > div:nth-child(3) {
         font-style: italic;
+    }
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.9215686275);
+        transform: scale(1.1);
     }
 
 }
