--- a/src/App.scss
+++ b/src/App.scss
@@ -195,7 +195,7 @@ a {text-decoration: none;}
     flex-wrap: wrap;
     text-align: center;
     justify-content: center;
-    margin-bottom: 10px;
+    margin: 10px 2px;
 }
 
 .scrollTop {
