search block + css

--- a/src/assets/Slider/slickSlider.scss
+++ b/src/assets/Slider/slickSlider.scss
@@ -1,9 +1,10 @@
 .lowerHeader {
-    padding: 20px 25px;
+    padding: 20px 25px 0px;
     margin-top: 40px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     background-color: #f3f3f3;
     height: 270px;
+    position: relative;
 }
 .slick-slide img {
     width: 350px;
@@ -26,4 +27,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.globalSearch {
+    position: absolute;
+    width: 300px;
+    height: 20px;
+    right: 20px;
+    bottom: -16px;
+    padding: 8px 0;
+    background-color: #fff;
+    border-radius: 6px;
+    box-shadow: 0 1px 10px -6px rgba(0, 0, 0, 0.42), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 4px 5px -2px rgba(0, 0, 0, 0.1);
+    .MuiTextField-root {
+        top: 4px;
+        right: 0;
+        width: 94%;
+        padding: 0 10px;
+    }
 }
