--- a/src/App.scss
+++ b/src/App.scss
@@ -131,6 +131,7 @@
         z-index: 100;
         p {
             padding-left: 100px;
+            font-size: 16px;
         }
         .footerTitle {
             font-family: "Alegreya", serif;
@@ -180,9 +181,9 @@
 a {text-decoration: none;}
 
 .iconAlign {
-    vertical-align: text-top;
     padding-right: 5px;
-    font-size: 33px !important;
+    font-size: 25px !important;
+    color: #260852;
 }
 
 .blockTitle {
