--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -85,6 +85,12 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
         }
         .cardSubTitle {
             color: black;
+            &.brand {
+                padding-left: 23px;
+            }
+            &.model {
+                padding-left: 13px;
+            }
         }
     }
 }
