--- a/src/elements/elements.scss
+++ b/src/elements/elements.scss
@@ -26,9 +26,10 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
 
 .blockInfo {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     margin: 10px;
+    padding: 10px;
     min-width: 300px;
     height: 90px;
     /*box-shadow: $blockShadow;*/
@@ -38,6 +39,7 @@ $blockShadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%
     border-radius: 3px;
     transform: rotate(2deg);
     cursor: pointer;
+    font-size: 16px;
     > div:nth-child(2) {
         font-weight: 600;
         color: #676767;
